--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 5. Build Plugins -->
